--- a/TodoManager2/MainWindow.xaml
+++ b/TodoManager2/MainWindow.xaml
@@ -59,6 +59,8 @@
                     <ColumnDefinition Width="auto"/>
                     <ColumnDefinition/>
                     <ColumnDefinition/>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
 
                 <TextBlock Text="work span"
@@ -81,24 +83,44 @@
                          Grid.Column="3"
                          />
 
+                <TextBlock Text="DueDate after"
+                           Margin="16,0,4,0"
+                           Grid.Column="4"
+                           />
+
+                <Grid Grid.Column="5">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+
+                    <TextBox Text="0"
+                             Grid.Column="0"/>
+
+                    <TextBlock Text="day"
+                               Grid.Column="1"
+                               Margin="4,0,0,0"
+                               />
+                </Grid>
+
                 <StackPanel Orientation="Horizontal"
-                            Grid.Column="4"
+                            Grid.Column="6"
                             Grid.ColumnSpan="2"
                             HorizontalAlignment="Center"
                             >
 
                     <TextBlock Text="Completed"
                                Margin="0,0,4,0"
-                               Grid.Column="4"
+                               Grid.Column="6"
                                />
 
-                    <CheckBox Grid.Column="5"
+                    <CheckBox Grid.Column="7"
                               Margin="0,2,0,0"
                               />
                 </StackPanel>
 
                 <Button Content="Add todo"
-                        Grid.Column="6"
+                        Grid.Column="8"
                         Margin="0,0,4,0"
                         />
             </Grid>
