UI変更 / フォントサイズ変更に伴い、説明用のテキストボックスの高さを変更
定数指定から、行数に応じて自動で一定値まで伸縮する仕様に変更

--- a/TodoManager2/MainWindow.xaml
+++ b/TodoManager2/MainWindow.xaml
@@ -46,9 +46,10 @@
                            />
                 <TextBox Name="textInputTextBox"
                          Grid.Column="1"
+                         Height="auto"
+                         MaxHeight="60"
                          TextWrapping="Wrap"
                          AcceptsReturn="True"
-                         Height="35"
                          Margin="0,2,0,2"
                          FontSize="14"
                          />
