--- a/TodoManager2/MainWindow.xaml
+++ b/TodoManager2/MainWindow.xaml
@@ -149,6 +149,7 @@
                         Grid.Column="8"
                         Margin="0,0,4,0"
                         FontSize="14"
+                        Command="{Binding AddTodoCommand}"
                         />
             </Grid>
 
