--- a/TodoManager2/MainWindow.xaml
+++ b/TodoManager2/MainWindow.xaml
@@ -168,6 +168,13 @@
                   Margin="0,2,2,2"
                   ItemsSource="{Binding TodoList}"
                   >
+
+            <ListView.ItemContainerStyle>
+                <Style TargetType="ListViewItem">
+                    <Setter Property="VerticalContentAlignment" Value="Top"/>
+                </Style>
+            </ListView.ItemContainerStyle>
+
             <ListView.View>
 
                 <GridView>
