仕様変更 / 完了日時の表示部分を調整
Todo から完了日時を専用のフォーマットで取得できるよう変更し、UIに入力している

--- a/TodoManager2/MainWindow.xaml
+++ b/TodoManager2/MainWindow.xaml
@@ -267,7 +267,9 @@
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
 
-                    <GridViewColumn DisplayMemberBinding="{Binding CompletionDateTime}"/>
+                    <GridViewColumn Header="完了日時"
+                                    Width="75"
+                                    DisplayMemberBinding="{Binding CompletionDateTimeString}"/>
                 </GridView>
             </ListView.View>
         </ListView>
