機能追加 / チェックボックスの状態に応じて行ごとに色がつくように変更
ControlTemplate 内で Backgroud を templateBinding
外部の Trigger によって背景色を設定できるよう変更

--- a/TodoManager2/MainWindow.xaml
+++ b/TodoManager2/MainWindow.xaml
@@ -187,8 +187,9 @@
                                 <Border x:Name="Border"
                                         Padding="2"
                                         SnapsToDevicePixels="true"
-                                        Background="Transparent">
-
+                                        Background="{TemplateBinding Background}"
+                                        >
+                                    
                                     <VisualStateManager.VisualStateGroups>
                                         <VisualStateGroup x:Name="SelectionStates">
                                             <VisualState x:Name="Unselected" />
@@ -220,6 +221,18 @@
 
                         </Setter.Value>
                     </Setter>
+
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding IsCompleted}" Value="False">
+                            <Setter Property="Background" Value="Honeydew"/>
+                        </DataTrigger>
+
+                        <DataTrigger Binding="{Binding WorkSpanMinutes}" Value="True">
+                            <Setter Property="Background" Value="Transparent"/>
+                        </DataTrigger>
+
+                    </Style.Triggers>
+
                 </Style>
             </ListView.ItemContainerStyle>
 
