機能追加 / Todoリストを更新する機能を追加。キー操作、Todo追加時に発動するよう実装

--- a/TodoManager2/MainWindow.xaml
+++ b/TodoManager2/MainWindow.xaml
@@ -12,6 +12,10 @@
         <local:MainWindowViewModel/>
     </Window.DataContext>
 
+    <Window.InputBindings>
+        <KeyBinding Key="F5" Command="{Binding ReloadTodoListCommand}" />
+    </Window.InputBindings>
+
     <Window.Resources>
 
         <!--Control colors.-->
