--- a/TodoManager2/MainWindow.xaml
+++ b/TodoManager2/MainWindow.xaml
@@ -37,30 +37,62 @@
 
         <Grid Grid.Column="0"
               Grid.RowSpan="2">
-            
+            <StackPanel>
 
-            <ListView ItemsSource="{Binding TagList}"
-                      Grid.Column="0"
-                      >
-                <ListView.View>
-                    <GridView>
-                        <GridViewColumn Header="tags"
-                                        Width="100"
-                                        DisplayMemberBinding="{Binding Content}"
-                                        />
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
 
-                        <GridViewColumn Header="check">
-                            <GridViewColumn.CellTemplate>
-                                <DataTemplate>
-                                    <CheckBox IsChecked="{Binding IsChecked}" />
-                                </DataTemplate>
-                            </GridViewColumn.CellTemplate>
-                        </GridViewColumn>
+                    <TextBlock Text="タグ検索方式"
+                               Margin="0,2,0,0"
+                               HorizontalAlignment="Center"
+                               Grid.Column="0"
+                               />
+                    <ComboBox Grid.Column="1" >
 
-                    </GridView>
-                </ListView.View>
-            </ListView>
+                        <i:Interaction.Triggers>
+                            <i:EventTrigger EventName="SelectionChanged">
+                                <i:InvokeCommandAction Command="{Binding ChangeTagSearchTypeCommand}"
+                                                       CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=ComboBox},
+                                                       Path=SelectedItem.Content}"
+                                                       />
+                            </i:EventTrigger>
+                        </i:Interaction.Triggers>
+                        <ComboBoxItem Content="AND"
+                                      HorizontalAlignment="Stretch">
+                        </ComboBoxItem>
 
+                        <ComboBoxItem Content="OR"
+                                      IsSelected="True"
+                                      HorizontalAlignment="Stretch">
+                        </ComboBoxItem>
+                    </ComboBox>
+                </Grid>
+                <ListView ItemsSource="{Binding TagList}"
+                          Grid.Column="0"
+                          >
+                    <ListView.View>
+                        <GridView>
+                            <GridViewColumn Header="tags"
+                                            Width="100"
+                                            DisplayMemberBinding="{Binding Content}"
+                                            />
+
+                            <GridViewColumn Header="check">
+                                <GridViewColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <CheckBox IsChecked="{Binding IsChecked}" />
+                                    </DataTemplate>
+                                </GridViewColumn.CellTemplate>
+                            </GridViewColumn>
+
+                        </GridView>
+                    </ListView.View>
+                </ListView>
+
+            </StackPanel>
         </Grid>
 
         <StackPanel Grid.Column="1"
