機能追加 / 検索上限数を指定するコマンドを追加し、UIとバインド

--- a/TodoManager2/MainWindow.xaml
+++ b/TodoManager2/MainWindow.xaml
@@ -129,6 +129,15 @@
                                />
                     <ComboBox Grid.Column="1">
 
+                        <i:Interaction.Triggers>
+                            <i:EventTrigger EventName="SelectionChanged">
+                                <i:InvokeCommandAction Command="{Binding ChangeResultCountLimit}"
+                                                       CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=ComboBox},
+                                                       Path=SelectedItem.Tag}"
+                                                       />
+                            </i:EventTrigger>
+                        </i:Interaction.Triggers>
+
                         <ComboBoxItem Content="100"
                                       IsSelected="True"
                                       HorizontalAlignment="Stretch">
