--- a/TodoManager2/MainWindow.xaml
+++ b/TodoManager2/MainWindow.xaml
@@ -345,8 +345,51 @@
                               />
                 </StackPanel>
 
+            </Grid>
+
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="50"/>
+                    <ColumnDefinition Width="4*"/>
+                    <ColumnDefinition Width="1*"/>
+                </Grid.ColumnDefinitions>
+
+                <TextBlock Text="tags >"
+                           Grid.Column="0"
+                           Margin="0,2,0,0"
+                           HorizontalAlignment="Center"
+                           />
+
+                <ListBox ItemsSource="{Binding CreatingTodo.Tags}"
+                         Grid.Column="1"
+                         BorderThickness="0"
+                         >
+
+                    <ListBox.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <StackPanel Orientation="Horizontal"
+                                        HorizontalAlignment="Center"
+                                        />
+                        </ItemsPanelTemplate>
+                    </ListBox.ItemsPanel>
+
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBox Text="{Binding Content}"
+                                     MinWidth="150" />
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+
+                    <ListBox.ItemContainerStyle>
+                        <Style TargetType="ListBoxItem">
+                            <Setter Property="Padding" Value="0"/>
+                            <Setter Property="Margin" Value="0"/>
+                        </Style>
+                    </ListBox.ItemContainerStyle>
+                </ListBox>
+
                 <Button Content="Add todo"
-                        Grid.Column="8"
+                        Grid.Column="2"
                         Margin="0,0,4,0"
                         FontSize="14"
                         Command="{Binding AddTodoCommand}"
