機能追加 / Todoの情報をコピーする機能を追加
作成中のTodoの情報を、選択中のTodoの情報で上書きする機能
上書きするだけでポストするわけではない

--- a/TodoManager2/MainWindow.xaml
+++ b/TodoManager2/MainWindow.xaml
@@ -418,6 +418,15 @@
                   ItemsSource="{Binding TodoList}"
                   >
 
+            <ListView.ContextMenu>
+                <ContextMenu Name="todoListViewContextMenu">
+                    <MenuItem Header="Todoを複製"
+                              Command="{Binding CopyTodoCommand}"
+                              CommandParameter="{Binding Path=PlacementTarget.SelectedItem, RelativeSource={RelativeSource AncestorType=ContextMenu}}"
+                              />
+                </ContextMenu>
+            </ListView.ContextMenu>
+
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem">
                     <Setter Property="VerticalContentAlignment" Value="Top"/>
