機能追加 / Todoを複製、そのまま追加する機能を追加

--- a/TodoManager2/MainWindow.xaml
+++ b/TodoManager2/MainWindow.xaml
@@ -424,6 +424,12 @@
                               Command="{Binding CopyTodoCommand}"
                               CommandParameter="{Binding Path=PlacementTarget.SelectedItem, RelativeSource={RelativeSource AncestorType=ContextMenu}}"
                               />
+
+                    <MenuItem Header="Todoを複製して投稿"
+                              Command="{Binding AddCloneCommand}"
+                              CommandParameter="{Binding Path=PlacementTarget.SelectedItem, RelativeSource={RelativeSource AncestorType=ContextMenu}}"
+                              />
+
                 </ContextMenu>
             </ListView.ContextMenu>
 
